# jotty

./: Cargo.toml  README.md  jotty.tape
src/: app.rs  cli.rs  controller.rs  journal.rs  main.rs  model.rs  view.rs
src/app/: storage_actions.rs
src/journal/: map_bujo.rs
src/model/: journal.rs  mem_model.rs  sqlite_model.rs
src/model/journal/: map_bujo.rs
