[package]
name = "jotty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
crossterm = "0.29.0"
ratatui = "0.29"
time = { version = "0.3.41", features = ["local-offset"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
directories-next = "2.0.0"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
clap = { version = "4.5.48", features = ["derive"] }
