[package]
name = "jotty"
description = "a bullet journal for your terminal"
version = "1.0.0"
edition = "2024"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/w13n/jotty"

[dependencies]
anyhow = "1.0.99"
crossterm = "0.29.0"
ratatui = "0.29"
time = { version = "0.3.41", features = ["local-offset"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
directories-next = "2.0.0"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
clap = { version = "4.5.48", features = ["derive"] }

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.
